--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ body {
 
 .navbar {
   display: flex;
-  padding: 3rem 12rem 0;
+  padding: 2rem 12rem 2rem;
   justify-content: space-between;
   align-items: center;
 }
@@ -75,13 +75,13 @@ body {
 }
 
 .hero .content {
-  margin-top: 5rem;
+  margin-top: 3rem;
 }
 
 .hero .content h1 {
   font-weight: 400;
   font-size: 80px;
-  line-height: 85px;
+  line-height: 80px;
 }
 
 .hero .content h1 span {
@@ -93,7 +93,7 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: 500;
   color: #8f8f8f;
-  max-width: 60%;
+  max-width: 56%;
   margin-top: 2rem;
 }
 
@@ -126,9 +126,7 @@ body {
   font-size: 24px;
 }
 
-.mascot {
-  margin-top: 1rem;
-}
+
 
 .mascot .man img {
   height: 550px;
@@ -160,8 +158,8 @@ body {
 .mascot .vr {
   transform: scale(0.8);
   position: absolute;
-  top: 100px;
-  right: 210px;
+  top: 120px;
+  right: 230px;
 }
 
 .mascot .book {
