--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,16 +55,37 @@ body {
 
 .nav_menu .nav_list a {
   color: black;
+  transition:  all 200ms ease-out;
 }
+
+.nav_menu .nav_list a:hover {
+  color: #44a58a;
+  transition:  all 200ms ease-in;
+}
+
 
 .nav_register {
   border-radius: 37px;
   border: 3px solid #d9d9d9;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0;
+  transition: all 300ms ease-out;
+}
+
+.nav_register:hover {
+  background-color: #44a58a;
+  border: 3px solid #44a58a;
+  transition: all 300ms ease-in;
 }
 
 .nav_register a {
   color: black;
+  padding: 0.5rem 1rem;
+  transition: all 300ms ease-out;
+}
+
+.nav_register a:hover {
+  color: white;
+  transition: all 200ms ease-in;
 }
 
 /* Hero */
@@ -106,6 +127,12 @@ body {
 
 .hero_button a {
   color: black;
+  transition:  all 200ms ease-out;
+}
+
+.hero_button .watch:hover {
+  color: #44a58a;
+  transition:  all 200ms ease-in;
 }
 
 .hero_button .trial {
@@ -115,6 +142,12 @@ body {
   border-radius: 40px;
   margin-right: 2rem;
   font-weight: 500;
+  transition:  all 200ms ease-out;
+}
+
+.hero_button .trial:hover {
+  opacity: .8;
+  transition:  all 200ms ease-in;
 }
 
 .hero_button .icon {
@@ -126,7 +159,15 @@ body {
   font-size: 24px;
 }
 
+.scroll-down a {
+  color: black;
+  transition:  all 200ms ease-out;
+}
 
+.scroll-down a:hover {
+  color: #44a58a;
+  transition:  all 200ms ease-in;
+}
 
 .mascot .man img {
   height: 550px;
